--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "rich>=14.1.0",
+    "typing-extensions>=4.14.1",
 ]
 
 [project.scripts]
